# seed-from-alignment

./: .dockerignore  .gitignore  AGENTS.md  README.md  all.fa  combined_1.cacofold.cov  filter_db_for_rosetta.py  pyproject.toml  qc.sh  refine_unpaired_regions.py  repomix.sh  run_pipeline.py  sample_cacofold_structures.py  sample_cli.py  sample_loop.sh  selected_rnas.fasta
benchmark_runner/: .gitignore  ALGO_AND_HYPERPARAMS.md  README.md  USAGE.md  defaults.yaml  pyproject.toml
benchmark_runner/scripts/: ablation_rerank_selected_rnas.py  bgsu_make_structured_manifest.py  build_fr3d_u400_ensemble_predictions.py  build_u300_50_rnss_ensemble_predictions.py  casp_build_manifest.py  casp_filter_truth_len.py  casp_list_pdb_chains.py  casp_prepare_chain_pdbs.py  echo_predictor.py  legacy_predictor.py  make_fr3d_benchmark_report_data.py  make_fr3d_u400_baseline_report.py  make_fr3d_u400_ensemble_report.py  make_hyperparameter_ablation_report.py  make_top_k_test_report.py  make_u300_50_ensemble_validation_report.py  make_u300_50_scaffold_validation_report.py  make_u400_multik_summary_report.py  manifest_from_fasta.py  oracle_candidates_selected_rnas.py  plot_fr3d_u400_ensemble_cdfs.py  profile_refine_scaling.py  rna_sets_build_targets.py  run_benchmark.sh  run_manifest_predict_parallel.sh  run_manifest_predict_parallel_generic.sh  run_manifest_predict_score_stream.sh  run_selected_rnas_predict_score.sh  run_u300_hparam_ablation.sh  run_u300_top_k_test_v1.sh  run_u400_topk500_v1.sh  select_u300_50_representative.py  select_u300_hyperparam_ablation_manifest.py  ssbench.sh  sweep_hparams_selected_rnas.py
benchmark_runner/src/ssbench/: __init__.py  cli.py  config.py  sequence.py
benchmark_runner/src/ssbench/dataset/: bgsu_representatives.py  pdb_extract_chain.py  rcsb_fetch.py
benchmark_runner/src/ssbench/metrics/: ensemble_metrics.py  helix_metrics.py  pair_metrics.py  pk_metrics.py
benchmark_runner/src/ssbench/predict/: cacofold_mcmc_pipeline.py  cacofold_pipeline.py  eternafold_subopt.py  fasta_utils.py  interface.py  linearfold_zuker.py  parse_dotbracket.py  rerank_existing_candidates.py  rnastructure_allsub.py  rnastructure_fold.py  run_command_predictor.py
benchmark_runner/ssbench/: __init__.py
benchmark_runner/tests/: test_barnaba_extract_smoke.py  test_helices.py  test_pair_metrics.py  test_parse_dotbracket.py  test_pk_detect.py
benchmark_runner/tools/rnastructure_docker/: AllSub  DuplexFold  Fold  Partition  ProbabilityPlot  README.md  _wrap.py
benchmark_runner/tools/scaffold_backends/: README.md  _ct.py  _docker.py
(+108 files in other folders)
